codestyle: loop